# NEWorldProject

./: .gitmodules  CMakeLists.txt  README.md
CMake/: BootStrap.cmake  Commands.cmake
Libs/: CMakeLists.txt
Tools/: CMakeLists.txt
Tools/Deploy/: CMakeLists.txt
Tools/Deploy/Source/: App.cpp
Tools/Deploy/minizip/: CMakeLists.txt  README.md  minizip.c
Tools/Manager/: CMakeLists.txt
Tools/Manager/CMake/: FindLibGit2.cmake
Tools/Manager/Source/: App.cpp  Clone.cpp  Clone.hpp
Tools/ProjectManager/: CMakeLists.txt
Tools/ProjectManager/Source/: App.cpp  Clone.cpp  Test.cpp
Tools/Test/: CMakeLists.txt
Tools/Test/Source/: Test.cpp
